<resources>
    <string name="app_name">Inventory App</string>
    <string name="details_activty">Product Details</string>
    <string name="editor_activity">Editor Product</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="noData">There is no Products now \n\ Get started by adding a Producte </string>
    <string name="details_supplier_name">Suplier Name</string>
    <string name="details_supplier_mail">Email</string>
    <string name="details_supplier_phone">Phone Number</string>
    <string name="save">Save</string>
    <string name="update">Update  Product</string>
    <string name="successful">Product Added Successfully</string>
    <string name="confirm_leave">are you sure ? you will not save the producr.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add Activety</string>
    <string name="delete_product">Delet</string>
    <string name="send_email">Send Mail</string>
    <string name="phone_call">Call</string>
    <string name="supplier">Supplier</string>
    <string name="product_price">Price</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="details_product_name">Product Name</string>
</resources>
